--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,3 +4,11 @@
   justify-content: center;
 
 }
+
+.inst {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  color: rgb(50, 50, 145);
+
+}
